applications/openeuler-website-new-portal/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: openeuler-website-new-portal
  name: openeuler-website-new-portal
