applications/openeuler-website-new-portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openeuler-website-service
  namespace: openeuler-website-new-portal
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: openeuler-website
  type: ClusterIP
